2006-07-09  Chris Taylor  <chris@icculus.org>

	* main/laser.c, main/object.c: fix crash when a robot's guided
	missile explodes

	* arch/carbon/descent.r: don't allow MPW build to run in OS X
	(it won't work and doesn't need to)

2006-06-05  Chris Taylor  <chris@icculus.org>

	* main/slew.h: fix error when building editor with RELEASE

2006-06-03  Chris Taylor  <chris@icculus.org>

	* main/game.c, main/gauges.c: the gauges work in 320xXXX (sdl)
	again. It needs to create gauge canvases in the game when they're
	sub-canvases, which they were made into on 2005-08-13

2006-03-05  Chris Taylor  <chris@icculus.org>

	* main/inferno.c: create write directory if it doesn't exist
	(didn't work before)

	* main/gamesave.c, main/object.c, main/render.c,
	main/editor/kfuncs.c, main/editor/med.c: allow the editor to be
	built with NDEBUG

2006-02-26  Chris Taylor  <chris@icculus.org>

	* include/strutil.h, main/bm.c, main/gamepal.c, main/gamesave.c,
	main/movie.c, main/piggy.c, misc/strutil.c:
	move change_filename_ext to strutil.c, rename to (and remove old)
	change_filename_extension, add an assert and make it use strrchr

	* main/gamerend.c: show the death sequence for d2x-gl
	(fix bug #2513)

	* main/gamesave.c: with the editor built, don't make .txm files
	when a level is loaded (only make them when saving levels)

2006-02-25  Chris Taylor  <chris@icculus.org>

	* main/menu.c: complete removal of 7th option in Options menu,
	hopefully fixing bug #2514

	* main/gameseg.c: when breaking a light, allow segment light to
	change by more than F1_0

2006-02-24  Chris Taylor  <chris@icculus.org>

	* main/gauges.c: make sure the correct font is used (whoops)

	* main/newmenu.c: restore the old canvas after showing a menu,
	avoiding potential problems

2005-11-29  Chris Taylor  <chris@icculus.org>

	* main/titles.c: for Descent 1 briefings, look for briefings no
	further than NUM_D1_BRIEFING_SCREENS (fix bug #2270)

2005-11-07  Chris Taylor  <chris@icculus.org>
